# image-inpainting-master

./: .gitignore  Dockerfile  application.py  config.py  download.py  pyproject.toml  requirements.txt
inpaint/: inpaint_convolution.py  inpaint_model.py  predict.py  region_convoluiton.py
static/: application.js  draw.js  styles.css
templates/: index.html
