[project]
name = "image-inpainting-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awsebcli>=3.24.1",
    "flask>=3.1.0",
    "gdown>=5.2.0",
    "keras>=3.9.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "tensorflow>=2.19.0",
]

[tool.setuptools]
packages = ["image-inpainting-master"]
